[package]
name = "rtc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-reflect = "0.12"
prost-types = "0.12"
clap = { version = "4", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
bytes = "1"
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
http = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.11"
